Creata versione CD del Canzoniere

--- a/canzoni/Il_Ponte_Sul_Fiume_Arno.tex
+++ b/canzoni/Il_Ponte_Sul_Fiume_Arno.tex
@@ -10,4 +10,6 @@ Puzza come un animal,
 Studia, ma resta un gran somar.
 Merda di un santannino,
 Fatti vicino: ti devo lavar!
+
+\ALLREP{2}
 \end{canzone}
