--- a/canzoni/Il_Santannino_Puzza.tex
+++ b/canzoni/Il_Santannino_Puzza.tex
@@ -12,6 +12,9 @@ E voi cadrete nell’oblio!
 Nostro sarà il trionfo
 E voi cadrete nell’oblio!
 
+Nostro sarà il trionfo
+E voi cadrete nell’oblio!
+
 Il normalista è fiero:
 Non prova mai timor;
 Combatte per dar gloria
