--- a/canzoni/Il_Sogno_Alla_Normale.tex
+++ b/canzoni/Il_Sogno_Alla_Normale.tex
@@ -4,5 +4,7 @@
 Il sogno alla Normale è 
 Svegliarsi la mattina
 E veder bruciare 
-Piazza Santa Caterina! 
+Piazza Santa Caterina!
+
+\ALLREP{3}
 \end{canzone}
