--- a/canzoni/Lo_Han_Segato_Alla_Scuola_Normal.tex
+++ b/canzoni/Lo_Han_Segato_Alla_Scuola_Normal.tex
@@ -6,9 +6,9 @@ Avviterà bulloni: è infelice il santannino.
 Voleva esser fisico, studiare la natura,
 Ma della sua ignoranza sì che c’è da aver paura!
 
-\ARIT: L’han segato alla Scuola Normal
-\aritskip Assieme ad altri segati,
-\aritskip Assieme ad altri segati
+\ARIT: L’han segato alla Normal
+\aritskip Segato resterà
+\aritskip E con gli altri segati
 \aritskip Lui è andato a star.
 
 D’estate una mattina lui è andato all’ammissione:
@@ -19,9 +19,9 @@ Almeno le addizioni eran cosa da imparare.
 \RIT
 
 Qualche giorno dopo in Santa Caterina
-Gli chiedon se è capace ad avvitar la lampadina:
+Gli chiedon se è capace di avvitar la lampadina:
 Lui prova a caso un verso, credendo sia lo stesso.
-Al secondo tentativo finalmente viene ammesso.
+Al terzo tentativo finalmente viene ammesso.
 
 \RIT
 
@@ -34,7 +34,7 @@ Non sa d’esser finito dentro a un covo di animali.
 
 Solo tre anni dopo devon scriver le tesine:
 Chiodi, viti oppure scienza delle merendine?
-Anche da laureato lui continua a rosicare
+Anche laureato lui continua a rosicare
 Perché da un normalista avrebbe solo da imparare.
 
 \RIT
