--- a/canzoni/Nella_Notte_Piu_Nera.tex
+++ b/canzoni/Nella_Notte_Piu_Nera.tex
@@ -9,7 +9,7 @@ Ancor più su,
 Su, su!
 Uniti contro il male,
 Lottiam per la Normale:
-La vittoria cerchiam e arriverà!
+Vittoria noi cerchiam e arriverà!
 
 Noi di folgore non armati
 I cieli squarceremo, sì!
