--- a/canzoni/Normale_Urra.tex
+++ b/canzoni/Normale_Urra.tex
@@ -20,10 +20,11 @@ Mostriamo ai loro anziani cos’è l’umiltà
 E da sevizie ridicole
 Salviam le loro matricole,
 Che dovran la vita
-Alla Normale, urrà! 
+Alla Normale, urrà!
 
 E da sevizie ridicole
 Salviam le loro matricole,
 Che dovran la vita
-Alla Normale, urrà! (x2)
+Alla Normale, urrà!
+(Alla Normale, urra!) (x2)
 \end{canzone}
