--- a/canzoni/Priore_Ciao.tex
+++ b/canzoni/Priore_Ciao.tex
@@ -30,4 +30,6 @@ Questa è la bomba del normalista,
 O priore ciao, priore ciao, priore ciao, ciao, ciao!
 Questa è la bomba del normalista
 Morto con lo scudo in man.
+Questa è la bomba del normalista
+Morto con lo scudo in man.
 \end{canzone}
