--- a/canzoni/Son_Perdenti_Son_Sfigati.tex
+++ b/canzoni/Son_Perdenti_Son_Sfigati.tex
@@ -1,7 +1,7 @@
 \section{Son perdenti, son sfigati}
 \subtitle{Sul canto tipico dei marines}
 
-\subtitle{Ogni verso si canta due volte}
+\subtitle{Ogni verso si canta due volte, tranne gli ultimi due}
 \begin{canzone}
 Son perdenti, son sfigati
 I giuristi e gli avvocati!
