--- a/canzoni/Sono_Gli_Scemi_Del_Santanna.tex
+++ b/canzoni/Sono_Gli_Scemi_Del_Santanna.tex
@@ -9,5 +9,10 @@ La genta ci domanda:
 Sono gli scemi del Sant’Anna,
 Tutti segati alla Normale,
 Che per cercar di rimediare
-Vanno a far finta di studiare. 
+Vanno a far finta di studiare.
+
+Sono gli scemi del Sant’Anna,
+Tutti segati alla Normale,
+Che per cercar di rimediare
+Vanno a far finta di studiare.
 \end{canzone}
