--- a/extra/seconda-copertina.tex
+++ b/extra/seconda-copertina.tex
@@ -9,10 +9,14 @@
 \vfill
 
 \begin{adjustwidth}{\sectionnumlen}{}\fontsize{10}{15}\selectfont
+  Adattato dal Canzoniere di Guerra di Dario Balboni\\
+
   Cornice e Titolo di Marta Tasinato\\
   Adeguamento Immagini di Piero Lafiosca ed Enrico Polesel\\
   Correzione testi di Nicolò Campodonico\\
-  Impaginazione e Layout di Dario Balboni
+  Impaginazione e Layout di Dario Balboni\\
+
+  Adattamento testi di Mauro Battipede, Lorenzo Furio, Salvatore Bellavia\\
 \end{adjustwidth}
 \clearpage
 
