--- a/canzoni/LHan_Segato_Alla_Normal.tex
+++ b/canzoni/LHan_Segato_Alla_Normal.tex
@@ -1,4 +1,4 @@
-\section{Lo han segato alla Scuola Normal}
+\section{L’han segato alla Normal}
 \subtitle{Sulla melodia di “Whiskey in the Jar” dei Dubliners}
 \begin{canzone}
 Come un animale si sveglia ogni mattino,
