--- a/canzoni/Scuola_Normale_La_Trionfera.tex
+++ b/canzoni/Scuola_Normale_La_Trionfera.tex
@@ -1,4 +1,4 @@
-\section{Scuola Normale trionferà}
+\section{Scuola Normale la trionferà}
 \subtitle{Sulla melodia di “Bandiera Rossa”}
 
 \subtitle{Tonalità possibilmente bassa}
