--- a/canzoniere.tex
+++ b/canzoniere.tex
@@ -128,35 +128,22 @@
 \end{center}%
 
 \input{canzoni/Normale_Urra}
-%\input{canzoni/Santanna_Merda}
-\input{canzoni/Scuola_Normale_Trionfera}
+\input{canzoni/Santanna_Merda}
+\input{canzoni/Scuola_Normale_La_Trionfera}
 \input{canzoni/Son_Perdenti_Son_Sfigati}
 \input{canzoni/Nella_Notte_Piu_Nera}
 \input{canzoni/Sono_Gli_Scemi_Del_Santanna}
-\input{canzoni/Lo_Han_Segato_Alla_Scuola_Normal}
-%\input{canzoni/Normale_Ole}
+\input{canzoni/LHan_Segato_Alla_Normal}
 \input{canzoni/Il_Ponte_Sul_Fiume_Arno}
-%\input{canzoni/Coro_Napoletano_Per_Maradona}
 \clearpage
 \logofalse
 \input{extra/intermezzo}
 \logotrue
 \input{canzoni/Il_Santannino_Puzza}
-%\input{canzoni/Noi_Vogliamo_Tanto_Bene}
-%\input{canzoni/Ma_Al_Santanna_No}
+\input{canzoni/Ma_Al_Santanna_No}
 \input{canzoni/Il_Sogno_Alla_Normale}
-%\input{canzoni/Benvenuti}
-%\input{canzoni/San_Francesco}
-%\input{canzoni/Siam_Venuti_Fin_Qua}
 \input{canzoni/Sit_Triumphans_O_Schola_Normalis}
-%\input{canzoni/Settimo_Comandamento}
-%\input{canzoni/Che_Confusione}
-%\input{canzoni/Poveri_Pirla}
-%\input{canzoni/Youporn}
-%\input{canzoni/Ribadiamo_Un_Po_Il_Concetto}
 \input{canzoni/Priore_Ciao}
-%\input{canzoni/Il_Santanna_E}
-%\input{canzoni/L_Importante_E_Partecipare}
 \input{canzoni/LArno_Mormorava}
 \input{canzoni/Il_vero_Normalista}
 \clearpage
