--- a/extra/seconda-copertina.tex
+++ b/extra/seconda-copertina.tex
@@ -16,7 +16,7 @@
   Correzione testi di Nicolò Campodonico\\
   Impaginazione e Layout di Dario Balboni\\
 
-  Adattamento testi di Mauro Battipede, Lorenzo Furio, Salvatore Bellavia\\
+  Adattamento testi di Mauro Battipede, Salvatore Bellavia e Lorenzo Furio\\
 \end{adjustwidth}
 \clearpage
 
