--- a/canzoni/Ma_Al_Santanna_No.tex
+++ b/canzoni/Ma_Al_Santanna_No.tex
@@ -2,30 +2,51 @@
 \subtitle{Sulla melodia di “Ma la notte no”}
 \begin{canzone}
 Quasi tutta la gente ha un’igiene decente,
-Ma al Sant'Anna no!
-
+Ma al sant'anna no!
 Relazioni normali ci son tra gli animali,
-Ma al Sant'Anna no!
-
+Ma al sant'anna no!
 Moderarsi ai processi lo san fare anche i fessi,
-Ma al Sant'Anna no!
-
+Ma al sant'anna no!
 Quasi ovunque in natura si è trovata una cura,
-Ma al Sant'Anna no!
+Ma al sant'anna no!
 
 Disegnare una theta lo fa un analfabeta,
-Ma al Sant'Anna no!
-
+Ma al sant'anna no!
 Cosa son le equazioni lo san pure i coglioni,
-Ma al Sant'Anna no!
-
+Ma al sant'anna no!
 Quattro conti azzeccati li fan pure i primati,
-Ma al Sant'Anna no!
-
+Ma al sant'anna no!
 L’intuizione geniale sempre abbonda in Normale,
-Ma al Sant'Anna no!
+Ma al sant'anna no!
 
 Urrà, urrà, urrà alla Normale,
-Ma al Sant'Anna no! 
-(si ripete quattro volte)
+Ma al sant'anna no!
+\ALLREP{4}
+
+Scuola Superiore de che?
+Puppa! “Superiore” siam noi!
+
+Ma al Santanna (segati!) (x5)
+Ma al Santanna no
+\ALLREP{2}
+
+Dice il latinista qui nessuno è fascista
+Ma al sant'anna no!
+Ingegneri e avvocati noi li abbiamo segati
+Ma al sant'anna no!
+E per questa rottura il gavettone è la cura
+Ma al sant'anna no!
+Noi ne abbiam centinaia, anzi molte migliaia
+Ma al sant'anna no!
+
+Urrà, urrà, urrà alla Normale,
+Ma al sant'anna no!
+\ALLREP{4}
+
+Scuola Superiore de che?
+Puppa! “Superiore” siam noi!
+
+Ma al Santanna (segati!) (x5)
+Ma al Santanna no
+\ALLREP{2}
 \end{canzone}
