--- a/canzoni/Sis_Triumphans_O_Schola_Normalis.tex
+++ b/canzoni/Sis_Triumphans_O_Schola_Normalis.tex
@@ -6,12 +6,12 @@
 Sis triumphans, o Schola Normalis,
 Mundi splendor, spes nostrae salutis,\hfill (salutis)
 Summae norma tu vere virtutis,
-Linguae, artis et scientiae studi\underline{o}sa!
+Artis, linguae et scientiae studi\underline{o}sa!\hfill (studiosa)
 
 Sanctae Annae sic bestia domata
-Triumphatrix sit scientiae regina,\hfill (regina)
+Triumphatrix sis scientiae regina,\hfill (regina)
 Et placata sua ira divina,
-Normalista nunc studet in p\underline{a}ce.
+Normalista nunc studet in p\underline{a}ce.\hfill (in pace)
 
 Vivat, vivat, vivat Normalis!
 Vivat, vivat, vivat Normalis!
