--- a/canzoniere.tex
+++ b/canzoniere.tex
@@ -128,7 +128,7 @@
 \end{center}%
 
 \input{canzoni/Normale_Urra}
-\input{canzoni/Santanna_Merda}
+%\input{canzoni/Santanna_Merda}
 \input{canzoni/Scuola_Normale_La_Trionfera}
 \input{canzoni/Son_Perdenti_Son_Sfigati}
 \input{canzoni/Nella_Notte_Piu_Nera}
@@ -142,9 +142,10 @@
 \input{canzoni/Il_Santannino_Puzza}
 \input{canzoni/Ma_Al_Santanna_No}
 \input{canzoni/Il_Sogno_Alla_Normale}
-\input{canzoni/Sit_Triumphans_O_Schola_Normalis}
+\input{canzoni/Sis_Triumphans_O_Schola_Normalis}
 \input{canzoni/Priore_Ciao}
 \input{canzoni/LArno_Mormorava}
+\input{canzoni/Santannin}
 \input{canzoni/Il_vero_Normalista}
 \clearpage
 \logofalse
