Revisionati tutti i testi

--- a/canzoni/Il_Ponte_Sul_Fiume_Arno.tex
+++ b/canzoni/Il_Ponte_Sul_Fiume_Arno.tex
@@ -1,15 +1,12 @@
 \section{Il ponte sul fiume Arno}
-\subtitle{Su “Colonel Bogey March” dal film “Il ponte sul fiume Kwai”}
 \begin{canzone}
 Guarda, che cosa vedi là?
 Sembra il culo d’un maial
-E invece è un santannino,
-Steccò persino il test in Normal!
+e invece è un santannino
+- steccò persino il test in Normal! -
 
-Puzza come un animal,
+Puzza come un animal.
 Studia, ma resta un gran somar.
 Merda di un santannino,
-Fatti vicino: ti devo lavar!
-
-\ALLREP{2}
+fatti vicino ti devo lavar!
 \end{canzone}
