--- a/canzoni/Il_Sogno_Alla_Normale.tex
+++ b/canzoni/Il_Sogno_Alla_Normale.tex
@@ -1,10 +1,7 @@
 \section{Il sogno alla Normale}
-\subtitle{Sulla melodia di “Il sogno di un Pisano”}
 \begin{canzone}
-Il sogno alla Normale è 
-Svegliarsi la mattina
-E veder bruciare 
-Piazza Santa Caterina!
-
-\ALLREP{3}
+Il sogno alla Normale è svegliarsi la mattina
+e veder bruciare piazza Santa Caterina
+\begin{flushright} \textit{\small Ad libitum}
+\end{flushright}
 \end{canzone}
