--- a/canzoni/LArno_Mormorava.tex
+++ b/canzoni/LArno_Mormorava.tex
@@ -1,51 +1,72 @@
 \section{L'Arno mormorava}
-\subtitle{Sulla melodia de “La canzone del Piave“}
+{\setstretch{1.2}\fontsize{13}{16}\selectfont
 \begin{canzone}
-L'Arno mormorava calmo e placido di fronte
-Ai primi allievi in marcia sopra il ponte.
-L'esercito avanzava, trasportava i propri scudi
-Mostrando al vento i fieri petti ignudi.
-Carrelli ovunque pien di gavettoni
+L'Arno mormorava
+calmo e placido di fronte
+ai primi allievi in marcia sopra il ponte.
+L'esercito avanzava,
+trasportava i propri scudi,
+mostrando al vento i fieri petti ignudi.
+
+Carrelli ovunque pien di gavettoni!
 Andavano a lavar quei gran puzzoni!
+
 S'udiva intanto dalle vie d'intorno
-Il forte canto ed il suonar del corno
-Era il gran grido delle invitte schiere
+il forte canto ed il suonar del corno.
+Era il gran grido delle invitte schiere.
+
 E l'Arno mormorò:
-Non passa l'ingegnere!
+"Non passa l'ingegnere!"
 
-Ma dopo la battaglia si parlò di codardia
-Ch'era il nemico presto corso via.
-Saliva la marmaglia sulle scale in Cavalieri
-Dava una foto in pasto a dei ciarlieri
+Ma dopo la battaglia
+si parlò di codardia,
+ch'era il nemico presto corso via.
+Saliva la marmaglia
+sulle scale in Cavalieri,
+dava una foto in pasto a dei ciarlieri.
+
 Giornali scrive certo non la storia
-Il santannino che grida vittoria
+il santannino che grida vittoria.
+
 Veniva intanto in mente a ogni buffone
-Il tempo dell'esame d'ammissione
-Credeva d'esser genio di sapere
+il tempo dell'esame d'ammissione.
+Credeva d'esser genio di sapere.
+
 Ma il test comandò:
-Segato è l'ingegnere!
+"Segato è l'ingegnere!"
 
-E ritornò una sera in San Francesco la tenzone
-Si miser tutti quanti in formazione.
-S'ergeva tra la schiera maestoso un gran fortino
-Sottrasse ogni speranza al santannino!
-Carrelli ultrà e scudi ancor più grossi
-E il fuoco e i calici scottanti e rossi!
+E ritornò una sera
+in San Francesco la tenzone:
+si miser tutti quanti in formazione.
+S'ergeva tra la schiera
+maestoso un gran fortino:
+sottrasse ogni speranza al santannino!
+
+Carrelli, ultrà e scudi ancor più grossi
+e il fuoco e i calici scottanti e rossi!
+
 Cercò la feccia allor di rimediare
-Le scale in carovana di occupare
-Ma i normalisti eran lì a tenere.
-La piazza comandò:
-Indietro va' ingegnere!
+Le scale in Carovana di occupare
+Ma i Normalisti eran lì a tenere.
 
-E indietreggiò sconfitto fino in Santa Caterina
-Si chiuse nella sua volgar latrina.
-Placatosi il conflitto tra le schiere il costruttore
-Apparve assieme al nostro Gran Priore!
+La piazza comandò:
+"Indietro va', ingegnere!"
+
+E indietreggiò sconfitto
+fino in Santa Caterina,
+si chiuse nella sua volgar latrina.
+Placatosi il conflitto
+tra le schiere il Costruttore
+apparve assieme al nostro Gran Priore!
+
 Sancì allora questa sacra vista
-La nobile vittoria normalista!
+la nobile vittoria normalista!
+
 Sicura casa e libere le scale
-E tacque l'Arno e si zittì il giornale.
-Sul patrio suolo vinti gl'ingegneri
-La scienza non trovò
-Spazzini e parrucchieri!
+e tacque l'Arno e si zittì il giornale.
+Sul patrio suolo vinti gl'ingegneri,
+
+la scienza non trovò
+spazzini e parrucchieri!
 \end{canzone}
+}
