--- a/canzoni/Ma_Al_Santanna_No.tex
+++ b/canzoni/Ma_Al_Santanna_No.tex
@@ -1,52 +1,43 @@
 \section{Ma al \santanna\ no}
-\subtitle{Sulla melodia di “Ma la notte no”}
 \begin{canzone}
-Quasi tutta la gente ha un’igiene decente,
-Ma al sant'anna no!
+Quasi tutta la gente ha un'igiene decente,
+\textit{ma al \santanna no!}
 Relazioni normali ci son tra gli animali,
-Ma al sant'anna no!
+\textit{ma al \santanna no!}
 Moderarsi ai processi lo san fare anche i fessi,
-Ma al sant'anna no!
+\textit{ma al \santanna no!}
 Quasi ovunque in natura si è trovata una cura,
-Ma al sant'anna no!
+\textit{ma al \santanna no!}
 
-Disegnare una theta lo fa un analfabeta,
-Ma al sant'anna no!
+Disegnare una {\selectlanguage{greek}θ}eta lo fa un analfabeta,
+\textit{ma al \santanna no!}
 Cosa son le equazioni lo san pure i coglioni,
-Ma al sant'anna no!
+\textit{ma al \santanna no!}
 Quattro conti azzeccati li fan pure i primati,
-Ma al sant'anna no!
-L’intuizione geniale sempre abbonda in Normale,
-Ma al sant'anna no!
+\textit{ma al \santanna no!}
+L'intuizione geniale sempre abbonda in Normale,
+\textit{ma al \santanna no!}
 
-Urrà, urrà, urrà alla Normale,
-Ma al sant'anna no!
-\ALLREP{4}
+Urrà! Urrà! Urrà alla Normale!
+Ma al \santanna no! \hspace{5em} {\small x4}
+\begin{flushright} Scuola Superiore de che?
+	Puppa! “Superiore” siam noi!
+\end{flushright}Ma al \santanna... \hspace{1.5em} \textit{- segati -}
+Ma al \santanna... no! \hspace{4em} {\small x2}
 
-Scuola Superiore de che?
+Dice il latinista qui nessuno è fascista,
+\textit{ma al \santanna no!}
+Ingegneri e avvocati, noi li abbiamo segati,
+\textit{ma al \santanna no!}
+E per questa rottura il gavettone è la cura,
+\textit{ma al \santanna no!}
+Noi ne abbiam centinaia, anzi, molte migliaia,
+\textit{ma al \santanna no!}
+
+Urrà! Urrà! Urrà alla Normale!
+Ma al \santanna no! \hspace{5em} {\small x4}
+\begin{flushright} Scuola Superiore de che?
 Puppa! “Superiore” siam noi!
-
-Ma al Santanna (segati!) (x5)
-Ma al Santanna no
-\ALLREP{2}
-
-Dice il latinista qui nessuno è fascista
-Ma al sant'anna no!
-Ingegneri e avvocati noi li abbiamo segati
-Ma al sant'anna no!
-E per questa rottura il gavettone è la cura
-Ma al sant'anna no!
-Noi ne abbiam centinaia, anzi molte migliaia
-Ma al sant'anna no!
-
-Urrà, urrà, urrà alla Normale,
-Ma al sant'anna no!
-\ALLREP{4}
-
-Scuola Superiore de che?
-Puppa! “Superiore” siam noi!
-
-Ma al Santanna (segati!) (x5)
-Ma al Santanna no
-\ALLREP{2}
+\end{flushright}Ma al \santanna... \hspace{1.5em} \textit{- segati -}
+Ma al \santanna... no! \hspace{4em} {\small x2}
 \end{canzone}
