--- a/canzoni/Nella_Notte_Piu_Nera.tex
+++ b/canzoni/Nella_Notte_Piu_Nera.tex
@@ -1,35 +1,35 @@
 \section{Nella notte più nera}
-\subtitle{Sulla melodia di “Let's Go“ del Coro dell’Armata Rossa}
 \begin{canzone}
 Nella notte più nera
-Non cerchiamo il sole, mio signor!
-Ma solo uno scudo e uno stemma bianco e blu
-Che ci porti ancor più su, 
-Ancor più su,
-Su, su!
-Uniti contro il male,
-Lottiam per la Normale:
-Vittoria noi cerchiam e arriverà!
+non cerchiamo il sole, mio signor,
+ma solo uno scudo e uno stemma bianco e blu
+che ci porti ancor più su,
+ancor più su!
+Su! Su!
+Uniti contro il male
+lottiam per la Normale.
+Vittoria noi cerchiam
+e arriverà!
 
 Noi di folgore non armati
-I cieli squarceremo, sì!
+i cieli squarceremo, sì!
 Ché di gavettoni tempesta sorgerà
-Che affondi il Sant’Anna giù, 
-Ancor più giù, 
-Giù, giù!
-Nell’abisso più infame,
-Più delle loro brame
-Di aver la dignità
-Della Normal!
+che affondi il \santanna giù,
+ancor più giù!
+Giù! Giù!
+Nell'abisso più infame,
+più delle loro brame
+di aver la dignità
+della Normal!
 
 Come fiera testuggine
-L’oscuro mare fermerem
+l'oscuro mare fermerem.
 E quando la luce infine tornerà
-L’onda azzurra crescerà,
-L’abbatterà 
-Là, là!
+l'onda azzurra crescerà,
+l'abbatterà!
+Là! Là!
 Là nelle loro tane
-Di sevizie inumane.
+di sevizie inumane.
 La Storia canterà:
-Normale urrà!
+Normale, urrà!
 \end{canzone}
