--- a/canzoni/Normale_Urra.tex
+++ b/canzoni/Normale_Urra.tex
@@ -1,30 +1,23 @@
-\section{Alla Normale urrà!}
-\subtitle{Sulla melodia di “When Johnny comes marching home”}
+\section{Alla Normale, urrà!}
 \begin{canzone}
-È pronta la Normale per le avversità:
-Abbiam giurato tutti non aver pietà!
+È pronta la Normale per le avversità,
+abbiam giurato tutti non aver pietà!
 I gavettoni alla fanteria,
-Dalle finestre l’artiglieria,
-Fremono gli idranti.
-Per la Normale urrà!
+dalle finestre l'artiglieria.
+Fremono gli idranti:
+per la Normale, urrà!
 
-Non hanno i santannini alcuna dignità:
-Son tutti dei fascisti figli di papà;
-Non hanno fatto neanche un bidet
-Sin dal lontano sessantatré:
+Non hanno i santannini alcuna dignità,
+son tutti dei fascisti figli di papà,
+non hanno fatto neanche un bidet
+sin dal lontano sessantatré.
 È arrivato il puzzo
-Sino in Normale già!
+sino in Normale già!
 
-Vedendoli fuggire ed implorar pietà,
-Mostriamo ai loro anziani cos’è l’umiltà
-E da sevizie ridicole
-Salviam le loro matricole,
-Che dovran la vita
-Alla Normale, urrà!
-
-E da sevizie ridicole
-Salviam le loro matricole,
-Che dovran la vita
-Alla Normale, urrà!
-(Alla Normale, urra!) (x2)
+Vedendoli fuggire ed implorar pietà
+mostriamo ai loro anziani cos'è l'umiltà
+e da sevizie ridicole
+salviam le loro matricole,
+che dovran la vita
+alla Normale, urrà!
 \end{canzone}
