--- a/canzoni/Santannin.tex
+++ b/canzoni/Santannin.tex
@@ -1,60 +1,55 @@
 \section{Santannin}
-\subtitle{Sulla melodia di “Popoff“}
 \begin{canzone}
-Dalla piazza Cavalieri
-sotto l'acqua santannina
+Dalla piazza Cavalieri,
+sotto l'acqua santannina,
 se ne infischiano del gelo
-gli studenti alla Normal
+gli studenti alla Normal.
 
-Col Fortino e i frombolieri
-camminando tutti in fila
+Col Fortino e i frombolieri,
+camminando tutti in fila,
 con lo scudo saldo in mano
-vanno contro il santannin
+vanno contro il santannin.
 
-Santannin
+Santannin,
 studi, studi e dopo un po'
 corri pronto a vomitare
-le nozioni al professor
-Santannin
-in battaglia che cos’hai
-rubi i fondi della scuola,
+le nozioni al professor.
+Santannin,
+in battaglia che cos'hai?
+Rubi i fondi della scuola
 ma non possono bastar.
 
-I normalisti lunghi e fieri
-con gli scudi volti in su
-i gavettoni san tirare,
-e il santannino non c’è più.
+\clearpage
+I normalisti lunghi e fieri,
+con gli scudi volti in su,
+i gavettoni san tirare
+e il santannino non c'è più.
 
 È rimasto senza fiato
-sulla pancia accovacciato:
-che istituto sfortunato
-esse esse esse u pi.
+sulla pancia accovacciato.
+Che istituto sfortunato
+S.S.S.U.P.!
 
-Santannin
+Santannin,
 studi, studi e dopo un po'
-corri pronto a vomitare
-le nozioni al professor
-Santannin
-in battaglia che cos’hai
-rubi i fondi della scuola,
-ma non possono bastar.
+...
 
-Dietro al pubblico pisano
-prima dell'ultimo round
-c'é una truppa d'eccezione
-é la squadra di Beltram
+Dietro al pubblico pisano,
+prima dell'ultimo round,
+c'é una truppa d'eccezione:
+è la squadra di Beltram.
 
 Mentre i nostri in formazione
-fanno fuoco per l'onor
+fanno fuoco per l'onor,
 loro vanno in Carovana
-a difender lo scalon
+a difender lo scalon.
 
-Santannin
+Santannin,
 corri, corri e arriverai
 solo contro mille scudi
-che ti forzano a scappar
-Santannin
+che ti forzano a scappar.
+Santannin,
 ma l'assalto dove sta?
-ci son solo quattro scemi
-ma non possono bastar
+Ci son solo quattro scemi
+ma non possono bastar!
 \end{canzone}
