--- a/canzoni/Sis_Triumphans_O_Schola_Normalis.tex
+++ b/canzoni/Sis_Triumphans_O_Schola_Normalis.tex
@@ -1,18 +1,14 @@
-\section{Sit triumphans, o Schola Normalis}
-\subtitle{Sul “Salve invicta Juditha formosa” di A. Vivaldi}
-
-\subtitle{Si ripete tutto due volte a gruppi di due versi, vivat esclusi}
+\section{Sis triumphans, o Schola Normalis}
 \begin{canzone}
 Sis triumphans, o Schola Normalis,
-Mundi splendor, spes nostrae salutis,\hfill (salutis)
+mundi splendor, spes nostrae salutis. \hspace{2em} {\small x2}
 Summae norma tu vere virtutis,
-Artis, linguae et scientiae studi\underline{o}sa!\hfill (studiosa)
+artis, linguae et scientiae studiosa. \hspace{3.4em} {\small x2}
 
-Sanctae Annae sic bestia domata
-Triumphatrix sis scientiae regina,\hfill (regina)
+{\normalsize s}anctae {\normalsize a}nnae sic bestia domata,
+triumphatrix sis scientiae regina. \hspace{4.2em} {\small x2}
 Et placata sua ira divina,
-Normalista nunc studet in p\underline{a}ce.\hfill (in pace)
+Normalista nunc studet in pace. \hspace{4.5em} {\small x2}
 
-Vivat, vivat, vivat Normalis!
-Vivat, vivat, vivat Normalis!
+Vivat! Vivat! Vivat Normalis! \hspace{6.8em} {\small x2}
 \end{canzone}
