--- a/canzoni/Sono_Gli_Scemi_Del_Santanna.tex
+++ b/canzoni/Sono_Gli_Scemi_Del_Santanna.tex
@@ -1,18 +1,10 @@
 \section{Sono gli scemi del \santanna}
-\subtitle{Il primo verso capocoro e poi tutti, il secondo tutti assieme}
 \begin{canzone}
-Ovunque voi andiate,
-Noi ci siamo.
-La genta ci domanda:
-“Ma chi sono?”
+Ovunque voi andiate, {\raggedleft \textit{noi ci siamo.}}
+La genta ci domanda: {\raggedleft \textit{“Ma chi sono?”}}
 
-Sono gli scemi del Sant’Anna,
-Tutti segati alla Normale,
-Che per cercar di rimediare
-Vanno a far finta di studiare.
-
-Sono gli scemi del Sant’Anna,
-Tutti segati alla Normale,
-Che per cercar di rimediare
-Vanno a far finta di studiare.
+Sono gli scemi del sant'anna,
+tutti segati alla Normale,
+che per cercar di rimediare
+vanno a far finta di studiare.
 \end{canzone}
