--- a/canzoni/Il_Santannino_Puzza.tex
+++ b/canzoni/Il_Santannino_Puzza.tex
@@ -1,28 +1,24 @@
 \section{Il santannino puzza}
-\subtitle{Sulla melodia della “Virginia Company”}
 \begin{canzone}
 Il santannino puzza,
-Ma lo laveremo noi.
-Se pure voi barate,
-Non ci arrenderemo mai!
+ma lo laveremo noi.
+Se pure voi barate
+non ci arrenderemo mai!
 Con Vasco condottiero
-E Beltram nostro dio,
+e Beltram nostro dio,
+nostro sarà il trionfo
+e voi cadrete nell’oblio!
 Nostro sarà il trionfo
-E voi cadrete nell’oblio!
-Nostro sarà il trionfo
-E voi cadrete nell’oblio!
+e voi cadrete nell’oblio!
 
-Nostro sarà il trionfo
-E voi cadrete nell’oblio!
-
-Il normalista è fiero:
-Non prova mai timor;
-Combatte per dar gloria
-Alla Normale Superior.
+Il normalista è fiero,
+non prova mai timor:
+combatte per dar gloria
+alla Normale Superior.
 E abbiamo dalla nostra
-Anche la gravità,
+anche la gravità...
 Se un giorno mai scopriste
-Che anche l’acqua in basso va:
-Ma siete troppo scemi
-E la Normale vincerà!
+che anche l'acqua in basso va,
+ma siete troppo scemi
+e la Normale vincerà!
 \end{canzone}
