--- a/canzoni/LHan_Segato_Alla_Normal.tex
+++ b/canzoni/LHan_Segato_Alla_Normal.tex
@@ -1,47 +1,46 @@
 \section{L’han segato alla Normal}
-\subtitle{Sulla melodia di “Whiskey in the Jar” dei Dubliners}
 \begin{canzone}
-Come un animale si sveglia ogni mattino,
-Avviterà bulloni: è infelice il santannino.
+Come un animale, si sveglia ogni mattino,
+avviterà bulloni, è infelice il santannino.
 Voleva esser fisico, studiare la natura,
-Ma della sua ignoranza sì che c’è da aver paura!
+ma della sua ignoranza sì che c'è da aver paura.
 
-\ARIT: L’han segato alla Normal
+\aritskip L’han segato alla Normal!
 \aritskip Segato resterà
-\aritskip E con gli altri segati
-\aritskip Lui è andato a star.
+\aritskip e con gli altri segati
+\aritskip lui è andato a star.
 
-D’estate una mattina lui è andato all’ammissione:
-Credeva d’esser genio, ma era solo un gran coglione;
+D'estate una mattina lui è andato all'ammissione,
+credeva d'esser genio, ma era solo un gran coglione.
 Di fronte a quei problemi non sapeva cosa fare:
-Almeno le addizioni eran cosa da imparare.
+almeno le addizioni eran cosa da imparare.
 
 \RIT
 
 Qualche giorno dopo in Santa Caterina
-Gli chiedon se è capace di avvitar la lampadina:
-Lui prova a caso un verso, credendo sia lo stesso.
-Al terzo tentativo finalmente viene ammesso.
+gli chiedon se è capace di avvitar la lampadina.
+Lui prova a caso un verso, credendo sia lo stesso,
+al terzo tentativo finalmente viene ammesso.
 
 \RIT
 
-Da povera matricola, quand’era appena entrato,
-Com’essere inferiore lui è stato seviziato.
-Onora i suoi anziani, ritenendoli speciali:
-Non sa d’esser finito dentro a un covo di animali.
+Da povera matricola, quand'era appena entrato,
+com'essere inferiore lui è stato seviziato.
+Onora i suoi anziani ritenendoli speciali,
+non sa d'esser finito dentro a un covo di animali.
 
 \RIT
 
 Solo tre anni dopo devon scriver le tesine:
-Chiodi, viti oppure scienza delle merendine?
+chiodi, viti oppure scienza delle merendine?
 Anche laureato lui continua a rosicare
-Perché da un normalista avrebbe solo da imparare.
+perché da un Normalista avrebbe solo da imparare.
 
 \RIT
 
 Giunto al quinto anno la sua essenza ha rivelato:
-Pelliccia attorno al corpo e cervello obnubilato.
-Il suo pensiero fisso lo tormenta ogni ora:
+pelliccia attorno al corpo e cervello obnubilato.
+Il suo pensiero fisso lo tormenta ogni ora.
 Quella bocciatura, mamma mia se brucia ancora!
 
 \RITB
