--- a/canzoni/Priore_Ciao.tex
+++ b/canzoni/Priore_Ciao.tex
@@ -1,35 +1,36 @@
 \section{Priore ciao}
-\subtitle{Sulla melodia di “Bella ciao“}
 \begin{canzone}
-Una mattina mi son svegliato,
-O priore ciao, priore ciao, priore ciao, ciao, ciao!
-Una mattina mi son svegliato,
-E ho trovato il santannin.
+Una mattina mi son svegliato
+- o priore ciao, priore ciao, priore ciao, ciao, ciao! -
+Una mattina mi son svegliato
+e ho trovato il santannin.
 
-O normalista, portami via!
-O priore ciao, priore ciao, priore ciao, ciao, ciao!
-O normalista, portami via:
-Questo puzza da morir!
+O Normalista, portami via
+- o priore ciao, priore ciao, priore ciao, ciao, ciao! -
+O Normalista, portami via,
+questo puzza da morir.
 
+E se io muoio con il mio scudo
+- o priore ciao, priore ciao, priore ciao, ciao, ciao! -
 E se io muoio con il mio scudo,
-O priore ciao, priore ciao, priore ciao, ciao, ciao!
-E se io muoio con il mio scudo,
-Tu mi devi seppellir.
+tu mi devi seppellir.
 
-E seppellire là in Carovana,
-O priore ciao, priore ciao, priore ciao, ciao, ciao!
-E seppellire là in Carovana,
-Sotto l’ombra di Beltram.
+E seppellire là in Carovana
+- o priore ciao, priore ciao, priore ciao, ciao, ciao! -
+E seppellire là in Carovana
+sotto l'ombra di Beltram.
 
-Tutti i pisani che passeranno,
-O priore ciao, priore ciao, priore ciao, ciao, ciao!
-Tutti i pisani che passeranno,
-Mi offriranno un gavetton.
+\clearpage
+Tutti i Pisani che passeranno
+- o priore ciao, priore ciao, priore ciao, ciao, ciao! -
+Tutti i Pisani che passeranno
+mi offriranno un gavetton.
 
-Questa è la bomba del normalista,
-O priore ciao, priore ciao, priore ciao, ciao, ciao!
-Questa è la bomba del normalista
-Morto con lo scudo in man.
-Questa è la bomba del normalista
-Morto con lo scudo in man.
+Questa è la bomba del Normalista
+- o priore ciao, priore ciao, priore ciao, ciao, ciao! -
+Questa è la bomba del Normalista
+morto con lo scudo in man.
+
+Questa è la bomba del Normalista
+morto con lo scudo in man!
 \end{canzone}
