--- a/canzoni/Scuola_Normale_La_Trionfera.tex
+++ b/canzoni/Scuola_Normale_La_Trionfera.tex
@@ -1,35 +1,33 @@
 \section{Scuola Normale la trionferà}
-\subtitle{Sulla melodia di “Bandiera Rossa”}
-
-\subtitle{Tonalità possibilmente bassa}
 \begin{canzone}
 Puzza di fogna, ti attacca il tifo,
-Pidocchi e rogna: fa proprio schifo!
-È il santannino: è un animale,
-Ma la Normale lo domerà.
+pidocchi e rogna, fa proprio schifo!
+È il santannino, è un animale,
+ma la Normale lo domerà.
 
-Scuola Normale la trionferà,
-Scuola Normale la trionferà,
-E il santannino che la sfiderà
-Lavato con Perlana si ritirerà!
+Scuola Normale la trionferà!
+Scuola Normale la trionferà
+e il santannino che la sfiderà
+lavato con Perlana si ritirerà!
 
 Noi integriamo gli operatori,
-Campi finiti, quadritensori;
-Mentre al Sant’Anna - che gran buffoni - 
-Solo addizioni sapete far!
+campi finiti, quadritensori;
+mentre al \santanna - che gran buffoni! - 
+solo addizioni sapete far.
 
-Scuola Normale la trionferà,
-Scuola Normale la trionferà,
-E il santannino che la sfiderà
-Lavato con Perlana si ritirerà.
+Scuola Normale la trionferà!
+Scuola Normale la trionferà
+e il santannino che la sfiderà
+lavato con Perlana si ritirerà!
 
+\clearpage
 I santannini sono ingegneri,
 sono giuristi, son parrucchieri.
 Ma quale genio? Ma che eccellenza?
 La vera scienza si fa in Normal!
 
-Scuola Normale la trionferà,
-Scuola Normale la trionferà,
-Scuola Normale la trionferà,
+Scuola Normale la trionferà!
+Scuola Normale la trionferà!
+Scuola Normale la trionferà!
 Se liberiam Barbieri chi vi salverà?
 \end{canzone}
