--- a/canzoni/Son_Perdenti_Son_Sfigati.tex
+++ b/canzoni/Son_Perdenti_Son_Sfigati.tex
@@ -1,15 +1,9 @@
 \section{Son perdenti, son sfigati}
-\subtitle{Sul canto tipico dei marines}
-
-\subtitle{Ogni verso si canta due volte, tranne gli ultimi due}
-\begin{canzone}
-Son perdenti, son sfigati
-I giuristi e gli avvocati!
-Gli ingegneri, che buffoni:
-Sbaglian pure le addizioni!
-
-Destinato è il santannino
-Solo a fare lo spazzino!
-Canta in cor la nostra truppa:
-S.S.S.U.Puppa!
-\end{canzone}
+{\normalfont
+\begin{tabular}{l r}
+	Son perdenti, son sfigati & \textit{I giuristi e gli avvocati!} \\
+	Gli ingegneri - che buffoni - & \textit{Sbaglian pure le addizioni!} \\
+	Destinato è il santannino & \textit{Solo a fare lo spazzino!} \\
+	Canta in cor la nostra truppa: & \textit{S.S.S.U... Puppa!}
+\end{tabular}
+}
