--- a/extra/seconda-copertina.tex
+++ b/extra/seconda-copertina.tex
@@ -8,15 +8,19 @@
 
 \vfill
 
-\begin{adjustwidth}{\sectionnumlen}{}\fontsize{10}{15}\selectfont
-  Adattato dal Canzoniere di Guerra di Dario Balboni\\
+\begin{adjustwidth}{\sectionnumlen}{}\fontsize{10}{11}\selectfont
+  Dal Canzoniere di Guerra di Dario Balboni\\
+  {\fontsize{8}{10}\selectfont
+	  Cornice e Titolo di Marta Tasinato\\
+	  Adeguamento Immagini di Piero Lafiosca ed Enrico Polesel\\
+	  Correzione testi di Nicolò Campodonico\\
+	  Impaginazione e Layout di Dario Balboni\\
+  }
 
-  Cornice e Titolo di Marta Tasinato\\
-  Adeguamento Immagini di Piero Lafiosca ed Enrico Polesel\\
-  Correzione testi di Nicolò Campodonico\\
-  Impaginazione e Layout di Dario Balboni\\
-
-  Adattamento testi di Mauro Battipede, Salvatore Bellavia e Lorenzo Furio\\
+  Nuovo adattamento testi:\\
+  Mauro Battipede, Salvatore Bellavia e Lorenzo Furio\\
+  Revisione grafica:\\
+  Flavio Ascari
 \end{adjustwidth}
 \clearpage
 
